Kubernetes/sevice-https.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-app
  labels:
    app: netflix-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "application" # ALB kullanımı
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:eu-west-1:600920219683:certificate/a3c15d29-9dbc-41be-91a5-5a13bab2df51" # SSL sertifika ARN'si
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "HTTP" # Backend'in HTTP kullandığını belirtir
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443" # HTTPS portunu belirtir
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
    - port: 443
      targetPort: 80
      protocol: TCP # HTTPS trafiği backend'e HTTP olarak yönlendirilir
  selector:
    app: netflix-app
