Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-app-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-west-1:600920219683:certificate/a3c15d29-9dbc-41be-91a5-5a13bab2df51"
    alb.ingress.kubernetes.io/host: "netflix.sbaylab.com"
    alb.ingress.kubernetes.io/path: "/*"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
spec:
  rules:
    - host: "netflix.sbaylab.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netflix-app-service
                port:
                  number: 80
